# dataStream

./: .gigignore  .gitignore
backend/: README.md  app.duckdb  backend_setup.sh  pyproject.toml  requirements.txt
backend/app/: main.py  rag-architecture.md
backend/app/config/: settings.py
backend/app/core/: settings.py
backend/app/data/: app.duckdb
backend/app/database/: db.py  duckdb_database.py
backend/app/middleware/: __init__.py  logger_middleware.py
backend/app/models/: user_model.py
backend/app/repos/: user_repository.py
backend/app/routers/: auth.py
backend/app/schemas/: connection_settings.py  user_auth_schemas.py
backend/app/services/: auth_service.py
backend/app/utils/: __init__.py  decorators.py  logger.py
backend/test/: test_app_logging.py  test_decorator.py
frontend/: eslint.config.js  jsconfig.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ProtectedRoute.jsx
frontend/src/pages/: Login.css  Login.jsx
