[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.19.0",
    "cryptography>=42.0.0",
    "duckdb-engine>=0.17.0",
    "fastapi-cli>=0.0.1",
    "fastapi[standard]==0.104.1",
    "google-generativeai==0.3.2",
    "httpx==0.25.2",
    "jose>=1.0.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pydantic==2.5.0",
    "pyjwt>=2.13.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.6",
    "rich==13.7.0",
    "sqlalchemy==2.0.23",
    "structlog==23.2.0",
    "typer==0.9.0",
    "uvicorn==0.24.0",
    "watchdog==3.0.0",
]
